--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,1 +1,49 @@
+name: Build APK
 
+on: [push]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+
+    - name: Prepare project structure
+      run: |
+        # Создаем структуру папок
+        mkdir -p app/src/main/assets/www
+        mkdir -p app/src/main/assets/www/assets
+        
+        # Копируем основные файлы
+        cp *.html *.css *.js app/src/main/assets/www/
+        
+        # Копируем содержимое папки assets (если существует)
+        if [ -d "assets" ]; then
+          cp -r assets/* app/src/main/assets/www/assets/
+        fi
+
+    - name: Download WebView template
+      run: |
+        wget https://github.com/Android-for-PWA/WebView-APK-Builder/archive/main.zip
+        unzip main.zip
+        mv WebView-APK-Builder-main/* .
+        rm -rf WebView-APK-Builder-main main.zip
+
+    - name: Build APK
+      run: |
+        chmod +x gradlew
+        ./gradlew assembleDebug
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: app-debug
+        path: app/build/outputs/apk/debug/app-debug.apk
